# dwitter

./: README.md  pyproject.toml
dwitter/: admin.py  forms.py  models.py  urls.py  views.py
dwitter/migrations/: 0001_initial.py  0002_dweet.py
dwitter/templates/: base.html
dwitter/templates/dwitter/: dashboard.html  profile.html  profiles.html
social/: settings.py  urls.py
