[tool.poetry]
name = "social"
version = "0.1.0"
description = ""
authors = ["Alexandre Karpov <alexakarpov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
